Wrote transaction API controller
